--- a/Insaid/Python/PythonBasicsQuestions1536650294362-200915-124356.ipynb
+++ b/Insaid/Python/PythonBasicsQuestions1536650294362-200915-124356.ipynb
@@ -17,16 +17,26 @@
    "source": [
     "### 1.Write a Python program to print the following string\n",
     "\n",
-    "Sample String: \"Welcome to INSAID- International School of AI and Data Science\"\n",
+    "Sample String: \"Welcome to ADS.\"\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 2,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Welcome to ADS\n"
+    }
+   ],
+   "source": [
+    "print('Welcome to ADS')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -37,23 +47,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Hellow World\n"
+    }
+   ],
    "source": [
-    "# Print “Hello, World!” to console\n"
+    "# Print “Hello, World!” to console\n",
+    "print('Hellow World')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "hammer\nwhite\nfish\nfrilled\nbullhead\nrequiem\n"
+    }
+   ],
    "source": [
     "# Define sharks variable as a list of strings ('hammer', 'white', 'fish', 'frilled', 'bullhead', 'requiem')\n",
+    "sharks = ['hammer', 'white', 'fish', 'frilled', 'bullhead', 'requiem']\n",
     "\n",
     "\n",
-    "# For loop that iterates over sharks list and prints each string item\n"
+    "# For loop that iterates over sharks list and prints each string item\n",
+    "for i in sharks:\n",
+    "    print (i)\n"
    ]
   },
   {
@@ -65,17 +95,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "30"
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
    "source": [
     "# initialise two varaibles\n",
     "\n",
-    "\n",
+    "a,b = 10,20\n",
     "# Add two numbers\n",
+    "c=a+b\n",
     "\n",
-    "\n",
-    "# Display the sum\n"
+    "# Display the sum\n",
+    "c"
    ]
   },
   {
@@ -87,17 +127,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "200"
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
    "source": [
     "# initialise two varaibles\n",
-    "\n",
+    "a,b = 10,20\n",
     "\n",
     "# multiply two numbers\n",
     "\n",
-    "\n",
-    "# Display the sum\n"
+    "m = a*b\n",
+    "# Display the sum\n",
+    "m"
    ]
   },
   {
@@ -112,11 +162,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "15.0"
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
    "source": [
     "# Area of the triangle A= 1/2(base * height)\n",
-    "\n",
+    "h , b = 3,10\n",
+    "a = (3*10)/2\n",
     "#given height=3 and base =10\n",
-    "\n"
+    "a\n"
    ]
   },
   {
@@ -128,14 +195,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "20\n10\n"
+    }
+   ],
    "source": [
     "# initialise two varaibles\n",
     "\n",
-    "\n",
-    "\n",
+    "a,b = 10,20\n",
+    "a,b = b,a\n",
+    "print(a)\n",
+    "print(b)\n",
     "# create a temporary variable and swap the values\n",
     "\n",
     "\n"
@@ -159,17 +236,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "<class 'int'>\n<class 'float'>\n<class 'complex'>\n"
+    }
+   ],
    "source": [
     "a = 1\n",
-    "\n",
+    "print(type(a))\n",
     "\n",
     "b = 2.0\n",
+    "print(type(b))\n",
     "\n",
-    "\n",
-    "c = 1+2j\n"
+    "c = 1+2j\n",
+    "print(type(c))"
    ]
   },
   {
@@ -182,19 +268,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 24,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "35\n[15, 20, 35]\n[30, 35, 60]\n[15, 20, 35, 40, 45, 30]\n"
+    }
+   ],
    "source": [
     "a = [15,20,35,40,45,30,35,60]\n",
     "\n",
     "# Print the item at index 2\n",
-    "\n",
+    "print(a[2])\n",
     "# Print the first 3 items\n",
-    "\n",
+    "print(a[0:3])\n",
     "# Print the last 3 items\n",
-    "\n",
-    "# Start to third last item"
+    "#print(a[len(a)-3:])\n",
+    "print(a[-3:])\n",
+    "# Start to third last item\n",
+    "print(a[0:-2])"
    ]
   },
   {
@@ -206,13 +302,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 25,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "125\n"
+    }
+   ],
    "source": [
     "b = 125.0\n",
     "c = 390.8\n",
-    "\n",
+    "print(int(b))\n",
     "# Print the Integer values"
    ]
   },
@@ -225,13 +329,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 27,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "10 is of type <class 'int'>\n10\n10 is of type <class 'str'>\n"
+    }
+   ],
    "source": [
     "a = 10\n",
     "\n",
     "print(a, \"is of type\", type(a))\n",
+    "\n",
+    "b = str(a)\n",
+    "print(b)\n",
+    "print(b, \"is of type\", type(b))\n",
+    "\n",
     "\n",
     "# Convert the value in a to a string and then print"
    ]
@@ -245,12 +362,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 29,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "50\n50 is of type <class 'int'>\n"
+    }
+   ],
    "source": [
     "a = \"50\"\n",
     "b = \"108\"\n",
+    "print(int(a))\n",
+    "print(int(a), \"is of type\", type(int(a)))\n",
     "\n",
     "# Find the difference between a and b"
    ]
@@ -264,12 +391,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "('request', 'source', 'repository', 'branch')"
+     },
+     "metadata": {},
+     "execution_count": 30
+    }
+   ],
    "source": [
     "myList = ['request', 'source', 'repository', 'branch']\n",
-    "\n",
+    "tuple(myList)\n",
     "# Print myList to a Tuple"
    ]
   },
@@ -282,12 +418,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "['blue', 'red', 'white']"
+     },
+     "metadata": {},
+     "execution_count": 31
+    }
+   ],
    "source": [
     "myTuple = ('blue', 'red', 'white')\n",
-    "\n",
+    "list(myTuple)\n",
     "# Print myTuple to a List"
    ]
   },
@@ -302,13 +447,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 37,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "['I', 'N', 'S', 'A', 'I', 'D']\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "['INSAID']"
+     },
+     "metadata": {},
+     "execution_count": 37
+    }
+   ],
    "source": [
     "myString = 'INSAID'\n",
-    "\n",
-    "# Convert myString to List\n"
+    "print(list(myString))\n",
+    "# Convert myString to List\n",
+    "l=[]\n",
+    "l.append(myString)\n",
+    "l"
    ]
   },
   {
@@ -345,11 +509,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 38,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "john has 5 cars.\n"
+    }
+   ],
    "source": [
-    "# Print \"john has 5 cars.\" using formatter"
+    "# Print \"john has 5 cars.\" using formatter\n",
+    "print('john has {} cars.'.format(5))"
    ]
   },
   {
@@ -361,12 +534,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 39,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "john likes open source.\n"
+    }
+   ],
    "source": [
     "open_string = \"john likes {}.\"\n",
-    "\n",
+    "print(open_string.format('open source'))\n",
     "# Use format method to print the following output \"john likes open source.\"\n"
    ]
   },
@@ -379,22 +560,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 40,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "john likes open-source software.\n"
+    }
+   ],
    "source": [
     "new_open_string = \"john likes {} {}.\"                      #2 {} placeholders\n",
-    "# Pass 2 strings into format method, separated by a comma to get output \"john likes open-source software.\""
+    "# Pass 2 strings into format method, separated by a comma to get output \"john likes open-source software.\"\n",
+    "print(new_open_string.format('open-source','software'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 46,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "john loves open-source software, and has 5 balloons.\n"
+    }
+   ],
    "source": [
     "sammy_string = \"john loves {} {}, and has {} {}.\"                      #4 {} placeholders\n",
-    "# Pass 4 strings into method to get output \"john loves open-source software, and has 5 balloons.\""
+    "# Pass 4 strings into method to get output \"john loves open-source software, and has 5 balloons.\"\n",
+    "print(sammy_string.format('open-source','software',5,'balloons'))"
    ]
   },
   {
@@ -406,12 +605,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 56,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "john the shark has a pet pilot fish!\n"
+    }
+   ],
    "source": [
     "# Reference sample\n",
-    "print(\"john the {} has a pet {}!\".format(\"shark\", \"pilot fish\"))"
+    "print(\"john the {first} has a pet {second}!\".format( first = \"shark\", second = \"pilot fish\"))\n"
    ]
   },
   {
@@ -423,14 +630,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 58,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "john the shark has a pet pilot fish!\njohn is a happy, smiling, and blue shark!\n"
+    }
+   ],
    "source": [
     "# Reference Sample\n",
     "print(\"john the {0} has a pet {1}!\".format(\"shark\", \"pilot fish\"))\n",
     "\n",
-    "print(\"john is a {}, {}, and {} {}!\".format(\"happy\", \"smiling\", \"blue\", \"shark\"))\n"
+    "print(\"john is a {0}, {1}, and {2} {3}!\".format(\"happy\", \"smiling\", \"blue\", \"shark\"))\n"
    ]
   },
   {
@@ -442,11 +657,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 59,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "123\n"
+    }
+   ],
    "source": [
-    "#Enter any string and print it\n"
+    "#Enter any string and print it\n",
+    "print(input('enter a number: '))"
    ]
   },
   {
@@ -462,23 +686,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 60,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "pass\n"
+    }
+   ],
    "source": [
     "grade = 70\n",
-    "\n"
+    "if grade >= 65:\n",
+    "    print ('pass')\n",
+    "else:\n",
+    "    print('fail')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 61,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "fail\n"
+    }
+   ],
    "source": [
     "# Use only if\n",
     "grade = 60\n",
-    "\n"
+    "\n",
+    "if grade >= 65:\n",
+    "    print ('pass')\n",
+    "else:\n",
+    "    print('fail')"
    ]
   },
   {
@@ -490,13 +737,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 77,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "You have no money in account. Please recharge\n"
+    }
+   ],
    "source": [
     "# Use if else\n",
-    "balance = 522\n",
-    "\n"
+    "balance = 0\n",
+    "\n",
+    "if balance <= 0:\n",
+    "    print('You have no money in account. Please recharge')\n",
+    "\n",
+    "else:\n",
+    "    a=input('Enter the amount to widthdraw: ')\n",
+    "    wid_amount= int(a)\n",
+    "    if(wid_amount> balance):\n",
+    "        print('Insufficient Balance')\n",
+    "    else:\n",
+    "         r = balance- int(a)\n",
+    "         print ('Remaining Balance: '+ str(r))\n",
+    "   \n"
    ]
   },
   {
@@ -525,10 +792,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "720"
+     },
+     "metadata": {},
+     "execution_count": 89
+    }
+   ],
+   "source": [
+    "def fibo(x):\n",
+    "    r=1;\n",
+    "    for i in range(1,x+1):\n",
+    "        r=r*i\n",
+    "    return r\n",
+    "fibo(6)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -553,13 +836,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 92,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "74\n"
+    }
+   ],
    "source": [
     "def sum_list(items):\n",
-    "    # Your code here\n",
-    "    return # Your variable\n",
+    "    \n",
+    "    '''\n",
+    "    s=0\n",
+    "    for i in items:\n",
+    "        s=s+i\n",
+    "    return s # Your variable\n",
+    "    '''\n",
+    "    return sum(items)\n",
     "print(sum_list([20,12,20,22]))"
    ]
   },
@@ -572,12 +869,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[10, 20, 30, 40, 50, 60, 70, 80]"
+     },
+     "metadata": {},
+     "execution_count": 94
+    }
+   ],
    "source": [
     "a = [10,20,30,40,50,60,70,40,80,50,40]\n",
-    "\n"
+    "\n",
+    "list(dict.fromkeys(a))"
    ]
   },
   {
@@ -589,13 +896,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 98,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "28\n"
+    }
+   ],
    "source": [
     "def max_num_in_list( list ):\n",
     "    # Your code\n",
-    "    return # Maximum value\n",
+    "    m= max(list)\n",
+    "    return m # Maximum value\n",
     "print(max_num_in_list([1, 12, 28, 0]))"
    ]
   },
@@ -608,9 +924,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 100,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "(0, 1, 2, 3, 'python', 'code')\n"
+    }
+   ],
    "source": [
     "# Code for concatenating 2 tuples\n",
     " \n",
@@ -618,7 +942,7 @@
     "tuple2 = ('python', 'code')\n",
     " \n",
     "# Concatenating above two\n",
-    "print('''Your code here''')"
+    "print(tuple1 +tuple2)"
    ]
   },
   {
@@ -630,15 +954,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 107,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "((0, 1, 2, 3), ('python', 'code'))\n"
+    }
+   ],
    "source": [
     "# Code for creating nested tuples\n",
     " \n",
     "tuple1 = (0, 1, 2, 3)\n",
     "tuple2 = ('python', 'code')\n",
-    "tuple3  # Your code goes here\n",
+    "tuple3= (tuple1,tuple2)  # Your code goes here\n",
     "print(tuple3)\n"
    ]
   },
@@ -651,13 +983,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 110,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "(0, 1, 2, 3, 4)\n"
+    }
+   ],
    "source": [
     "# Create a tuple & print\n",
-    "\n",
-    "\n",
+    "tuple4 = tuple1+(4,)\n",
+    "print(tuple1)\n",
     "#tuples are immutable, so you can not add new elements\n",
     "#using merge of tuples with the + operator you can add an element and it will create a new tuple\n",
     "\n",
@@ -960,9 +1300,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.4 64-bit ('base': conda)",
    "language": "python",
-   "name": "python3"
+   "name": "python_defaultSpec_1600493829655"
   },
   "language_info": {
    "codemirror_mode": {
@@ -974,7 +1314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4-final"
   }
  },
  "nbformat": 4,
