--- a/Insaid/EDA on Facebook Data/eda_facebook_draft.ipynb
+++ b/Insaid/EDA on Facebook Data/eda_facebook_draft.ipynb
@@ -154,6 +154,24 @@
    "source": [
     "fb_df[fb_df['age']>80].count()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "18     5196\n23     4404\n19     4391\n20     3769\n21     3671\n25     3641\n17     3283\n16     3086\n22     3032\n24     2827\n26     2815\n15     2618\n28     2364\n27     2240\n33     1999\n29     1936\n14     1925\n30     1716\n31     1694\n108    1661\n32     1443\n34     1257\n53     1192\n35     1175\n36     1118\n38     1099\n43     1063\n103    1044\n52      995\n51      971\n       ... \n77      169\n78      162\n101     157\n83      152\n80      136\n106     125\n79      112\n81      108\n107      98\n98       93\n84       86\n85       83\n99       83\n105      80\n82       78\n95       77\n86       76\n91       76\n104      73\n90       71\n96       70\n88       61\n89       60\n97       56\n92       52\n87       42\n112      18\n111      18\n110      15\n109       9\nName: age, Length: 101, dtype: int64"
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
+   "source": [
+    "fb_df['age'].value_counts()"
+   ]
   }
  ]
 }
